@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+2011-02-17  Vasco Nunes
+	* Added native Cocoa generic dialogs under macosx, using pyobjc.
+
 2011-02-13  Piotr Ożarowski
 	* SQLAlchemy 0.7 compatibility changes
 
